--- a/configuration.properties
+++ b/configuration.properties
@@ -1,1 +1,4 @@
 browser=chrome
+envytruck=https://qa2.vytrack.com/user/login
+sales_manager_username=salesmanager120
+sales_manager_password=UserUser123
